// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnConfiguration component should render all columns 1`] = `
<DocumentFragment>
  <a
    href="/uniprotkb/P21802"
  >
    P21802 (Swiss-Prot)
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 2`] = `
<DocumentFragment>
  <span>
    uniprot id
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 3`] = `
<DocumentFragment>
  <div>
    <strong>
      rec full Name
    </strong>
  </div>
  <div>
    1.2.3.4
  </div>
  <div>
    recommended short name
  </div>
  <div>
    <ul
      class="no-bullet"
    >
      <li>
        a full alt Name (short alt name1) 
      </li>
    </ul>
  </div>
  <div>
    <ul
      class="no-bullet"
    >
      <li>
        containsrec full Name (containsrecommended short name)  
        <strong>
          Alternative names: 
        </strong>
        containsa full alt Name (containsshort alt name1) 
      </li>
    </ul>
  </div>
  <div>
    <ul
      class="no-bullet"
    >
      <li>
        sub full Name
      </li>
    </ul>
  </div>
  <div>
    biotech
  </div>
  <div />
  <div />
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 4`] = `
<DocumentFragment>
  <div>
    <strong>
      some Gene
    </strong>
  </div>
  <div>
    some Syn
  </div>
  <div>
    some orf
  </div>
  <div>
    some locus
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 5`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    scientific name (common name)  (synonyms 1)
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 6`] = `
<DocumentFragment>
  10 AA
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 7`] = `
<DocumentFragment>
  <div>
    some Gene
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 8`] = `
<DocumentFragment>
  some locus
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 9`] = `
<DocumentFragment>
  some orf
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 10`] = `
<DocumentFragment>
  some Syn
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 11`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606 
  </a>
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?lvl=0&id=9606"
    target="_blank"
  >
    NCBI
    <svg
      viewBox="0 0 576 512"
      width="12.5"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 12`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 13`] = `
<DocumentFragment>
  lineage 1
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 14`] = `
<DocumentFragment>
  <p>
    <a
      href="/taxonomy/9606"
    >
      scientific name (common name)  (synonyms 1)
    </a>
  </p>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 15`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 16`] = `
<DocumentFragment>
  Fragment
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 17`] = `
<DocumentFragment>
  1,185 Da
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 18`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Molecular mass is 2.1 Da from positions 
    <span>
      1-7
    </span>
    . Determined by LSI. note value 
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 400 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PIRNR:PIRNR001361
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 19`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 20`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 21`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 22`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 23`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <div>
      Edited at positions 
      <span>
        rna position 
        <span
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          role="button"
          tabindex="0"
        >
          <svg
            height="12"
            viewBox="0 0 400 512"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
              id="Shape"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </span>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
        >
          <div>
            <h5>
              Automatic assertion according to rules
            </h5>
            <div>
              PIRNR:PIRNR001361
            </div>
          </div>
        </div>
      </span>
    </div>
    <div>
      <span>
        value 
        <span
          class="evidence-tag svg-colour-unreviewed"
          data-testid="evidence-tag-trigger"
          role="button"
          tabindex="0"
        >
          <svg
            height="12"
            viewBox="0 0 400 512"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
              id="Shape"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </span>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
        >
          <div>
            <h5>
              Automatic assertion according to rules
            </h5>
            <div>
              PIRNR:PIRNR001361
            </div>
          </div>
        </div>
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 24`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      target="_blank"
    >
      sequence
      <svg
        viewBox="0 0 576 512"
        width="12.5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 400 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PIRNR:PIRNR001361
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 25`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 26`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 27`] = `
<DocumentFragment>
  <span>
    5
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 28`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    Abs(max) = ~10nm
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <span
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          height="12"
          viewBox="0 0 426 512"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
            id="Shape"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <div>
            PROSITE-ProRule:PRU10028
          </div>
        </div>
      </div>
    </section>
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 426 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PROSITE-ProRule:PRU10028
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 29`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 30`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 31`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 32`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <span>
      Cofactor Name 
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          height="12"
          viewBox="0 0 400 512"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
            id="Shape"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <div>
            PIRNR:PIRNR001361
          </div>
        </div>
      </div>
    </span>
    <section
      class="text-block"
    >
      value2
      <span
        class="evidence-tag svg-colour-unreviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          height="12"
          viewBox="0 0 400 512"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
            id="Shape"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <div>
            PIRNR:PIRNR001361
          </div>
        </div>
      </div>
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 33`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 34`] = `
<DocumentFragment>
  1.2.3.4 
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      height="12"
      viewBox="0 0 426 512"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
        id="Shape"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion according to rules
      </h5>
      <div>
        PROSITE-ProRule:PRU100210
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 35`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 36`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 37`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    <ul
      class="no-bullet"
    >
      <li>
        K
        <sub>
          M
        </sub>
        =2.0999999046325684uM for sub1 
        <span
          class="evidence-tag svg-colour-reviewed"
          data-testid="evidence-tag-trigger"
          role="button"
          tabindex="0"
        >
          <svg
            height="12"
            viewBox="0 0 426 512"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
              id="Shape"
            />
          </svg>
          <span
            class="evidence-tag__label"
            title=""
          >
            1 automatic annotation
          </span>
        </span>
        <div
          class="evidence-tag-content "
          data-testid="evidence-tag-content"
        >
          <div>
            <h5>
              Automatic assertion according to rules
            </h5>
            <div>
              PROSITE-ProRule:PRU10028
            </div>
          </div>
        </div>
      </li>
    </ul>
  </section>
  <section
    class="text-block"
  >
    <section
      class="text-block"
    >
      value1
      <span
        class="evidence-tag svg-colour-reviewed"
        data-testid="evidence-tag-trigger"
        role="button"
        tabindex="0"
      >
        <svg
          height="12"
          viewBox="0 0 426 512"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
            id="Shape"
          />
        </svg>
        <span
          class="evidence-tag__label"
          title=""
        >
          1 automatic annotation
        </span>
      </span>
      <div
        class="evidence-tag-content "
        data-testid="evidence-tag-content"
      >
        <div>
          <h5>
            Automatic assertion according to rules
          </h5>
          <div>
            PROSITE-ProRule:PRU10028
          </div>
        </div>
      </div>
    </section>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 38`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 39`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 40`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 41`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 426 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PROSITE-ProRule:PRU10028
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 42`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 426 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PROSITE-ProRule:PRU10028
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 43`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 44`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value1
    <span
      class="evidence-tag svg-colour-reviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 426 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PROSITE-ProRule:PRU10028
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 45`] = `
<DocumentFragment>
  <span
    title="Annotation Score"
  >
    <span
      class="doughnut-chart--medium colour-light-grey"
    >
      <span
        class="doughnut-chart--medium__left-wrap"
      >
        <span
          class="doughnut-chart--medium__left-wrap__loader colour-uniprot-blue"
          style="transform: rotate(0deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__right-wrap"
      >
        <span
          class="doughnut-chart--medium__right-wrap__loader colour-uniprot-blue"
          style="transform: rotate(72deg);"
        />
      </span>
      <span
        class="doughnut-chart--medium__inner-circle"
      >
        1/5
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 46`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    The sequence 
    <a
      class="external-link"
      href="//www.ebi.ac.uk/ena/data/view/sequence"
      target="_blank"
    >
      sequence
      <svg
        viewBox="0 0 576 512"
        width="12.5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
        />
      </svg>
    </a>
     differs from that shown. Reason: Erroneous initiation Text note
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 400 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PIRNR:PIRNR001361
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 47`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #keyword value
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 48`] = `
<DocumentFragment>
  <a
    href="/keywords/KW-11111"
  >
     #KW-11111
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 49`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 50`] = `
<DocumentFragment>
  1: Evidence at protein level
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 51`] = `
<DocumentFragment>
  <span
    class="uniprot-title__status icon--reviewed"
  >
    <svg
      height="512"
      viewBox="0 0 426 512"
      width="426"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M432 144H288V0l144 144zM112.96 404.128l66.112 34.752-12.624-73.632 53.488-52.16L146 302.336l-33.056-66.976-33.072 66.976-73.92 10.752 53.504 52.16-12.64 73.632 66.144-34.752zM32 491.856V512h200.192L112.96 449.312 32 491.856zm114-189.52l-33.056-66.976-33.072 66.976L32 309.312v29.152l27.456 26.784-12.64 73.632 66.144-34.752 66.112 34.752-12.624-73.632 53.488-52.16L146 302.336zM256 176V0H32v268.88l21.312-3.104 59.648-120.784 59.6 120.784 133.312 19.408-96.448 94.032L232.192 512H432V176H256z"
        id="Shape"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 52`] = `
<DocumentFragment>
  <div>
    <a
      href="/uniprotkb/P12345"
    >
      P12345
    </a>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 53`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 54`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 55`] = `
<DocumentFragment>
  <section
    class="text-block"
  >
    value
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 400 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PIRNR:PIRNR001360
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 56`] = `
<DocumentFragment>
  <h4>
    Disease Id (someAcron)
  </h4>
  <span
    class="text-block"
  >
    <span
      class="evidence-tag svg-colour-unreviewed"
      data-testid="evidence-tag-trigger"
      role="button"
      tabindex="0"
    >
      <svg
        height="12"
        viewBox="0 0 400 512"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 144H256V0l144 144zm-176 32V0H0v512h400V176H224z"
          id="Shape"
        />
      </svg>
      <span
        class="evidence-tag__label"
        title=""
      >
        1 automatic annotation
      </span>
    </span>
    <div
      class="evidence-tag-content "
      data-testid="evidence-tag-content"
    >
      <div>
        <h5>
          Automatic assertion according to rules
        </h5>
        <div>
          PIRNR:PIRNR001362
        </div>
      </div>
    </div>
  </span>
  <div
    class="info-list"
  >
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        Note
      </div>
      <div
        class="info-list__item__content"
      >
        <ul
          class="no-bullet"
        >
          <li>
            value2
          </li>
        </ul>
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        Description
      </div>
      <div
        class="info-list__item__content"
      >
        some description
      </div>
    </div>
    <div
      class="info-list__item"
    >
      <div
        class="info-list__item__title"
      >
        See also
      </div>
      <div
        class="info-list__item__content"
      >
        <a
          class="external-link"
          href="http://www.omim.org/entry/3124"
          target="_blank"
        >
          MIM:3124
          <svg
            viewBox="0 0 576 512"
            width="12.5"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 57`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 58`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 59`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 60`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 61`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 62`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 63`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 64`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 65`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 66`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 67`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 68`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 69`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 70`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 71`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 72`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 73`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 74`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 75`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 76`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 77`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        href="/citations/somepID1"
      >
        somepID1
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID1"
      >
        somepID1
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID1"
      >
        somepID1
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID1"
      >
        somepID1
      </a>
    </li>
    <li>
      <a
        href="/citations/somepID1"
      >
        somepID1
      </a>
    </li>
    <button
      class="button link-button"
      data-testid="expandable-message"
      type="button"
    >
      More items
    </button>
  </ul>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 78`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 79`] = `
<DocumentFragment>
  2015-08-02
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 80`] = `
<DocumentFragment>
  2016-04-24
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 81`] = `
<DocumentFragment>
  2017-01-21
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 82`] = `
<DocumentFragment>
  <span>
    20
  </span>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 83`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 84`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 85`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 86`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 87`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 88`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 89`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 90`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 91`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 92`] = `
<DocumentFragment>
  <a
    href="/taxonomy/9606"
  >
    9606
  </a>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 93`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 94`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 95`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 96`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 97`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 98`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 99`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 100`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 101`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 102`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 103`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 104`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 105`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 106`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 107`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 108`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 109`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 110`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 111`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 112`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 113`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 114`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 115`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 116`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 117`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 118`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 119`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 120`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 121`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 122`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 123`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 124`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 125`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 126`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 127`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 128`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 129`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 130`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 131`] = `
<DocumentFragment>
  <ul
    class="no-bullet"
  >
    <li>
      <a
        class="external-link"
        href="https://www.ensembl.org/id/id value"
        target="_blank"
      >
        id value
        <svg
          viewBox="0 0 576 512"
          width="12.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
          />
        </svg>
      </a>
       description value 
      <a
        href="#Q9NXB0-1"
      >
        [Q9NXB0-1]
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`ColumnConfiguration component should render all columns 132`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 133`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 134`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 135`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 136`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 137`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 138`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 139`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 140`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 141`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 142`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 143`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 144`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 145`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 146`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 147`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 148`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 149`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 150`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 151`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 152`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 153`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 154`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 155`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 156`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 157`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 158`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 159`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 160`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 161`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 162`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 163`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 164`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 165`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 166`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 167`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 168`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 169`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 170`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 171`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 172`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 173`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 174`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 175`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 176`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 177`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 178`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 179`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 180`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 181`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 182`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 183`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 184`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 185`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 186`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 187`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 188`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 189`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 190`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 191`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 192`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 193`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 194`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 195`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 196`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 197`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 198`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 199`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 200`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 201`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 202`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 203`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 204`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 205`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 206`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 207`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 208`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 209`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 210`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 211`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 212`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 213`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 214`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 215`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 216`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 217`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 218`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 219`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 220`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 221`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 222`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 223`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 224`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 225`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 226`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 227`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 228`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 229`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 230`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 231`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 232`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 233`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 234`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 235`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 236`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 237`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 238`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 239`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 240`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 241`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 242`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 243`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 244`] = `<DocumentFragment />`;

exports[`ColumnConfiguration component should render all columns 245`] = `<DocumentFragment />`;
